@@ -1,1 +1,2 @@
-error
+<h2>You broke it!</h2>
+<p>Just kidding!  It seems the page you requested doesn't exist.</p>
