@@ -1,5 +1,11 @@
 * SVN *
 
+* [CHANGED] Changed {{ article.body }} and added {{ article.content }}
+
+  * {{ article.body }} is now always the article's body, regardless of what template is currently being rendered.
+  * {{ article.content }} tries to be a little smart.  On sections with multiple articles, it shows the excerpt, or the body if the excerpt is missing.
+  Single article templates show the body.
+
 * [NEW] Added {{ article.excerpt }} liquid tag for accessing an articles excerpt.
 
 * Change - Article#body_for_mode only returns the body, not excerpt + body.  This means you'll have to do this in your templates
